[gd_scene load_steps=11 format=2]

[ext_resource path="res://addons/graphics_editor/Editor.gd" type="Script" id=1]
[ext_resource path="res://addons/graphics_editor/PaintCanvasContainer.gd" type="Script" id=2]
[ext_resource path="res://addons/graphics_editor/PaintCanvas.tscn" type="PackedScene" id=3]
[ext_resource path="res://addons/graphics_editor/VisualGrid.tscn" type="PackedScene" id=4]
[ext_resource path="res://addons/graphics_editor/CanvasOutline.gd" type="Script" id=5]
[ext_resource path="res://addons/graphics_editor/Navbar.gd" type="Script" id=6]
[ext_resource path="res://addons/graphics_editor/MenuButtonExtended.gd" type="Script" id=7]
[ext_resource path="res://addons/graphics_editor/TextInfo.gd" type="Script" id=8]
[ext_resource path="res://addons/graphics_editor/SaveFileDialog.gd" type="Script" id=9]
[ext_resource path="res://addons/graphics_editor/Settings.tscn" type="PackedScene" id=10]

[node name="Editor" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 1024, 300 )
rect_clip_content = true
script = ExtResource( 1 )

[node name="PaintCanvasContainer" type="Control" parent="."]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 20.0
margin_right = -114.0
margin_bottom = -40.0
focus_mode = 1
mouse_filter = 1
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="PaintCanvas" parent="PaintCanvasContainer" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1600.0
margin_bottom = 1600.0
rect_min_size = Vector2( 1600, 1600 )

[node name="Grids" type="Control" parent="PaintCanvasContainer/PaintCanvas"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="VisualGrid" parent="PaintCanvasContainer/PaintCanvas/Grids" instance=ExtResource( 4 )]
mouse_filter = 2
color = Color( 0.639216, 0.639216, 0.639216, 1 )

[node name="VisualGrid2" parent="PaintCanvasContainer/PaintCanvas/Grids" instance=ExtResource( 4 )]
mouse_filter = 2
color = Color( 1, 1, 1, 1 )
size = 160

[node name="CanvasOutline" type="Control" parent="PaintCanvasContainer/PaintCanvas"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 5 )
color = Color( 0, 1, 0, 1 )

[node name="Navbar" type="Control" parent="."]
editor/display_folded = true
anchor_right = 1.0
margin_bottom = 20.0
script = ExtResource( 6 )

[node name="Panel" type="Panel" parent="Navbar"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Buttons" type="Control" parent="Navbar"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="File" type="MenuButton" parent="Navbar/Buttons"]
margin_right = 90.0
margin_bottom = 20.0
text = "File"
flat = false
items = [ "Save", null, 0, false, false, -1, 0, null, "", false, "Quit", null, 0, false, false, -1, 0, null, "", false ]
switch_on_hover = true
script = ExtResource( 7 )

[node name="Editor" type="MenuButton" parent="Navbar/Buttons"]
margin_left = 90.0
margin_right = 180.0
margin_bottom = 20.0
text = "Editor"
flat = false
items = [ "Settings", null, 0, false, false, -1, 0, null, "", false, "Reset Canvas Position", null, 0, false, false, -1, 0, null, "", false, "Toggle Grid", null, 0, false, false, -1, 0, null, "", false ]
switch_on_hover = true
script = ExtResource( 7 )

[node name="ToolMenu" type="Control" parent="."]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -114.0
margin_top = 20.0
margin_bottom = -40.0

[node name="Buttons" type="Control" parent="ToolMenu"]
anchor_right = 1.0
margin_bottom = 310.0

[node name="PaintTool" type="Button" parent="ToolMenu/Buttons"]
anchor_right = 1.0
margin_bottom = 70.0
text = "Paint Tool"

[node name="BucketTool" type="Button" parent="ToolMenu/Buttons"]
anchor_right = 1.0
margin_top = 70.0
margin_bottom = 140.0
text = "Bucket Tool"

[node name="RainbowTool" type="Button" parent="ToolMenu/Buttons"]
anchor_right = 1.0
margin_top = 140.0
margin_bottom = 210.0
text = "Rainbow Tool"

[node name="ColorPicker" type="ColorPickerButton" parent="ToolMenu/Buttons"]
anchor_right = 1.0
margin_top = 210.0
margin_bottom = 240.0

[node name="Layers" type="Control" parent="ToolMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 310.0

[node name="Tree" type="Tree" parent="ToolMenu/Layers"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -70.0
hide_root = true

[node name="BottomPanel" type="Panel" parent="."]
editor/display_folded = true
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -40.0

[node name="TextInfo" type="Control" parent="BottomPanel"]
script = ExtResource( 8 )

[node name="SaveFileDialog" type="FileDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -340.0
margin_top = -165.0
margin_right = 340.0
margin_bottom = 165.0
filters = PoolStringArray( "*.png ; PNG Images" )
script = ExtResource( 9 )

[node name="Settings" parent="." instance=ExtResource( 10 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -50.0
margin_right = 150.0
margin_bottom = 50.0
[connection signal="mouse_entered" from="PaintCanvasContainer" to="PaintCanvasContainer" method="_on_PaintCanvasContainer_mouse_entered"]
[connection signal="mouse_exited" from="PaintCanvasContainer" to="PaintCanvasContainer" method="_on_PaintCanvasContainer_mouse_exited"]
[connection signal="pressed" from="ToolMenu/Buttons/PaintTool" to="." method="_on_PaintTool_pressed"]
[connection signal="pressed" from="ToolMenu/Buttons/BucketTool" to="." method="_on_BucketTool_pressed"]
[connection signal="pressed" from="ToolMenu/Buttons/RainbowTool" to="." method="_on_RainbowTool_pressed"]
[connection signal="color_changed" from="ToolMenu/Buttons/ColorPicker" to="." method="_on_ColorPicker_color_changed"]
[connection signal="about_to_show" from="SaveFileDialog" to="SaveFileDialog" method="_on_SaveFileDialog_about_to_show"]
[connection signal="confirmed" from="SaveFileDialog" to="SaveFileDialog" method="_on_SaveFileDialog_confirmed"]
[connection signal="file_selected" from="SaveFileDialog" to="SaveFileDialog" method="_on_SaveFileDialog_file_selected"]
[connection signal="visibility_changed" from="SaveFileDialog" to="SaveFileDialog" method="_on_SaveFileDialog_visibility_changed"]
